Add route to update a player, but not his country
